# health-app

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
health-app/account/: Dockerfile  README.md  alembic.ini  example.env  pyproject.toml
health-app/account/app/: main.py
health-app/account/app/api/: __init__.py  accounts.py  authentication.py  doctor.py  main.py  utils.py
health-app/account/app/core/: auth_bearer.py  db.py  dependencies.py  redis.py  security.py  settings.py
health-app/account/app/exceptions/: __init__.py  already_exists.py  base.py  forbidden.py  handlers.py  invalid_auth_code.py  invalid_auth_scheme.py  invalid_login.py  invalid_token.py  invalid_token_type.py  no_result.py  unauthorized.py
health-app/account/app/kafka/: app.py  main.py  models.py
health-app/account/app/models/: __init__.py  base.py  role_models.py  token_models.py  user_models.py
health-app/account/app/repositories/: __init__.py  base.py
health-app/account/app/repositories/kafka/: base.py  session_repository.py
health-app/account/app/repositories/redis/: __init__.py  base.py  blacklist_token_repository.py
health-app/account/app/services/: __init__.py  role_service.py  session_service.py  token_service.py  user_service.py
health-app/account/app/uow/: broker.py  database.py  inmemory.py
health-app/account/app/utils/: datetime.py  enums.py
health-app/account/migrations/: env.py
health-app/account/migrations/versions/: 2024_12_16_1357-23a978409d88.py
health-app/account/tests/: app.py  database.py  redis.py
health-app/account/tests/endpoints/: accounts.py  authentication.py  doctor.py
health-app/account/tests/models/: __init__.py  role.py  tokens.py  user.py
health-app/account/tests/repositories/: blacklist_token.py  role.py  user.py
health-app/account/tests/services/: role.py  token.py  user.py
health-app/account/tests/utils/: uow.py
(+24 files in other folders)
